[gd_scene load_steps=2 format=2]

[ext_resource path="res://Authentication/Login.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_right = 248.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 252.0
margin_right = 757.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.04
alignment = 1

[node name="Mail" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 187.0
margin_right = 505.0
margin_bottom = 201.0
size_flags_vertical = 0
text = "Mail"
autowrap = true

[node name="MailInput" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 205.0
margin_right = 505.0
margin_bottom = 229.0

[node name="Password" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 233.0
margin_right = 505.0
margin_bottom = 264.0
size_flags_vertical = 0
text = "
Password"
autowrap = true

[node name="PasswordInput" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 268.0
margin_right = 505.0
margin_bottom = 292.0
secret = true

[node name="Login" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 296.0
margin_right = 505.0
margin_bottom = 316.0
text = "Login"

[node name="Log" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 320.0
margin_right = 505.0
margin_bottom = 351.0
size_flags_vertical = 0
text = "
"
autowrap = true

[node name="Register" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 355.0
margin_right = 505.0
margin_bottom = 375.0
text = "Register"

[node name="Offline" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 379.0
margin_right = 505.0
margin_bottom = 399.0
text = "Offline version"

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 761.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Register" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Offline" to="." method="_on_Offline_pressed"]
